# thermal

./: .gitignore  CLAUDE.md
docs/: BASELINE_MODELS.md  BASELINE_RESULTS.md  CITYLEARN_DR_EXPERIMENT.md  CITYLEARN_DR_RESULTS.md  DATA_ANALYSIS.md  DEEP_LEARNING_BRIEF.md  DRIFT_BOUNDARY_PREDICTION.md  DRIFT_MODELS.md  DRIFT_MODEL_PERFORMANCE.md  INCIDENTS_DATASET.md  MPC_CONTROLLER_SRS.md  MPC_EXPLAINED.md  PREDICTION_TASK_BRIEF.md  SETPOINT_BASELINES.md  SETPOINT_RESPONSES.md  THERMALGYM.md  TIME_TO_TARGET.md  citylearn_datasets.md
ecobee_processed_dataset/: DATASET_DOCUMENTATION.md  Ecobee_dataset_cleaning_report.docx  Metadata file_Ecobee.json
models/: active_time_xgb.pkl  drift_time_xgb.pkl
mpc/: __init__.py  controller.py  dp_solver.py  model_interfaces.py  peak_mpc.py  problem.py  transitions.py
outputs/: experiment_log.txt  rule_preheat_mpc_plans.jsonl  sanity_checks.txt
plans/: ACTIVE_DRIFT_SPLIT.md  BASELINE_PLAN.md  DATA_PLAN.md  DRIFT_REFORMULATION_PLAN.md  ERROR_ANALYSIS_PLAN.md  MPC_DYNAMIC_PROGRAMMING_PLAN.md  MPC_EVALUATION_PLAN.md  MULTI_PEAK_MPC_PLAN.md  MULTI_PEAK_MPC_SRS_PROMPT.md  RNN_PLAN.md  RULE_BASED_PREHEAT_MPC_PLAN.md  THERMALGYM_IMPL_PLAN.md  rule_based_baseline.md
rule_mpc/: __init__.py  rule_preheat.py
scripts/: analyze_errors.py  analyze_setpoint_changes.py  analyze_setpoint_deviations.py  evaluate_drift_model.py  (+18 more)
thermalgym/: DESIGN.md  SRS.md  __init__.py  buildings.py  env.py  generate.py  policies.py  pyproject.toml
thermalgym/data/buildings/: README.md  small_mixed_heatpump.idf
thermalgym/data/weather/: README.md
(+1 files in other folders)
