[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "thermalgym"
version = "0.1.0"
requires-python = ">=3.9"
description = "EnergyPlus-backed Gymnasium environment for residential HVAC demand response"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "pyarrow>=12.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["."]
include = ["thermalgym*"]

[tool.setuptools.package-data]
thermalgym = ["data/buildings/*.idf", "data/weather/*.epw"]
